src/stylesheets/Header.scss
@import "_variables";

.header-content {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 2rem;
  padding: 1rem;
  min-height: 100vh;
}

.title {
  font-size: 10vw;
  font-weight: 300;
}

header {
  h1 {
    font-weight: inherit;
    margin-bottom: 0.2em;
    line-height: 1;
  }

  h2 {
    font-weight: inherit;
    color: rgba(255, 255, 255, 0.446);
    font-size: 50%;
  }

  img {
    background-color: $green;
    border-radius: 50%;
    border: white 10px solid;
    max-width: 280px;
  }
}

@media screen and (max-width: $sm) {
  .header-content {
    flex-direction: column;
  }
  header {
    .title {
      font-size: 12vw;
      order: -1;
      text-align: center;
    }
  }
}

@media screen and (min-width: $sm) {
  .header-content {
    margin-top: 2rem;
  }
}

